--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-16}
+\date{2020-07-18}
 
 \begin{document}
 \maketitle
@@ -258,7 +258,7 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 \begin{verbatim}
 ## R version 4.0.2 (2020-06-22)
 ## Platform: x86_64-apple-darwin17.0 (64-bit)
-## Running under: macOS Catalina 10.15.5, RStudio 1.3.959
+## Running under: macOS Catalina 10.15.6, RStudio 1.3.1056
 ## 
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
@@ -322,24 +322,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.1            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.1              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -4808,22 +4809,14 @@ X_3 &= 10 + 2 \\
 \end{aligned} 
 \]
 
-The mean of the population, \(\mu = 10\), is a parameter that serves as model for the cookie weight data. When we calculate a model for our data, it's helpful to have an index of how well the model fits the data. Or perhaps more accurately, it's helpful to have a single number that indicates the extent to which the data (e.g., cookie weights) differ from the model.
+The mean/average of the population, \(\mu = 10\), is a parameter that serves as a model for the cookie weight data. However, it's helpful to have an index, also known as variance, that indicates the extent to which the data do not correspond to the model from the model.
 
 \hypertarget{variance-sigma2}{%
 \subsection{\texorpdfstring{Variance (\(\sigma^2\))}{Variance (\textbackslash sigma\^{}2)}}\label{variance-sigma2}}
 
 Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented by the symbol \(\sigma^2\).
 
-Recall, how we expressed difference/deviation from a model with an error term previously:
-
-\[
-\begin{aligned} 
-X_1 &= \mu + error_1 \\
-\end{aligned} 
-\]
-
-With values:
+Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation \(X_i = \mu +error_i\), see see Figure \ref{fig:meancookie}. The model for all the cookies is \(\mu = 10\). If we consider a single cookie weight of 8 grams (a data point), the difference of the cookie from the model is -2 (i.e., error):
 
 \[
 \begin{aligned} 
@@ -4831,13 +4824,13 @@ X_1 &= 10 + (-2) \\
 \end{aligned} 
 \]
 
-Variance is a single number that indicate the extent to which the data differ from the model. That is, we want to index the extent to which the cookie weights differ from our ``mean cookie'' model. Variance is a simple approach to assessing the fit of a model - or more accurately the lack of fit of a model.
+We want a number that indicates the quality of the cookie model. Specifically, we want a single number to index model quality that indexes how the data differ from the cookie model. We refer to that index as variance (\(\sigma^2\)).
 
-Errors, the extent to which the data differ from the model, are squared when calculating variance. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). You can see this done for all of the cookie weights:
+\textbf{Calculating Squared Errors.} To calculate variance (\(\sigma^2\)), we use the errors for the cookies -- how the cookies differ from the mean/model. The first step is to square the errors/differnces. Those squared numbers are referred to as the ``squared differences'' or ``squared errors''. The calculation of the squared error for each cookie weight is shown below. The squared errors (or squared differences) are 4, 0, and 4.
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
-Cookie Weight & Model & Error = Squared Difference\tabularnewline
+Cookie Weight & Model & Squared Difference\tabularnewline
 \midrule
 \endhead
 \(X_1 = 8\) & \(\mu = 10\) & \((X_1 - \mu)^2 =(8 - 10)^2= 4\)\tabularnewline
@@ -4846,17 +4839,7 @@ Cookie Weight & Model & Error = Squared Difference\tabularnewline
 \bottomrule
 \end{longtable}
 
-You can see in the table above that we can calculate the squared differences, also refered to as squared deviations, for cookies 1 through 3 (i.e., cookie weights 1 through 3). The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average of the three squared errors. This calculation, \((4 + 0 + 4)/3 = 2.67\), tells us the average of the squared differences from the model is 2.67 grams\(^2\). Because we squared the differences the units are also squared; in this case grams become grams\(^2\). We refer to 2.67 grams\(^2\) as the variance.
-
-Recall the formula for calculating an average:
-
-\[
-\begin{aligned} 
-\bar{X} &= \frac{\sum{X}}{N} \\
-\end{aligned} 
-\]
-
-You can see from the formula for variance below that variance is just an average. Variance is the average of the squared errors.
+\textbf{Averaging Squared Errors.} To obtain variance we calculate the average of the squared errors. This is shown below:
 
 \[
 \begin{aligned} 
@@ -4870,7 +4853,15 @@ You can see from the formula for variance below that variance is just an average
 \end{aligned} 
 \]
 
-It probably strikes you as an odd choice to square the difference between each data point and the model. Why not use just the difference (e.g., \((8 - 10) = -2\)) when calculating variance? Why not use the absolute difference (e.g., \(|8 - 10|= 2\)) when calculating variance? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we squared errors it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex mathematical reasons, we use squared errors when calculating the fit (or lack of fit) of a model.
+The resulting variance is 2.67 grams\(^2\). The cookie weights were measured in grams. The unit for variance, however, is grams\(^2\) because we squared the errors as part of the calculation. Recall the formula for calculating an average (shown below) and compare it to the variance calculation (above). Notice that variance is just an average -- an average of squared errors. Correspondingly, in some areas of statistics they don't use the term variance, they use a synonym - \textbf{mean squared error}.
+
+\[
+\begin{aligned} 
+\bar{X} &= \frac{\sum{X}}{N} \\
+\end{aligned} 
+\]
+
+It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just use the difference (e.g., \((8 - 10) = -2\)) when calculating variance? Why not use the absolute difference (e.g., \(|8 - 10|= 2\)) when calculating variance? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we use squared errors it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex mathematical reasons, we use squared errors when calculating the fit (or lack of fit) of a model.
 
 \textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In the cookie case, if the variance was zero, that would indicate that all the cookies had the same weight as the model, exactly 10 grams. To the extent that the variance is larger than zero it implies data points (i.e., cookie weights) differ from the model (i.e., the mean cookie). By implication, a larger variance indicates larger differences among the observations (e.g., cookie weights). That is, when the variance is small, cookie weights tend to be similar to the model -- and each other. In contrast, when the variance is large, cookie weights tend to be different from the model -- and each other.
 
