--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -4755,7 +4755,7 @@ In this section we review how to calculate three commonly used population parame
 
 It can be helpful to create a model that describes our data. Of course, the model won't describe every participant perfectly and each participant will differ to some extent from the model.
 
-\textbf{Model:} To create a model we first need data, which in this example will be the weight of three different chocolate chip cookies. As mentioned previously, the weights the three cookies are designated by \(X_1\), \(X_2\), and \(X_3\). A simple model for our cookie weight data is the mean, \(\mu\).
+\textbf{Model:} To create a model we first need data, which in this example will be the weight of three different chocolate chip cookies. As mentioned previously, the weights the three cookies are designated by \(X_1\), \(X_2\), and \(X_3\). A simple model for our cookie weight data is the mean. At the population level the mean is represented by the symbol \(\mu\); at the sample level a different notation is used.
 
 \[
 \begin{aligned} 
@@ -4814,7 +4814,7 @@ The mean/average of the population, \(\mu = 10\), is a parameter that serves as 
 \hypertarget{variance-sigma2}{%
 \subsection{\texorpdfstring{Variance (\(\sigma^2\))}{Variance (\textbackslash sigma\^{}2)}}\label{variance-sigma2}}
 
-Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented by the symbol \(\sigma^2\).
+Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented, at the population level, by the symbol \(\sigma^2\); a different notation is used at thesample level.
 
 Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation \(X_i = \mu +error_i\), see see Figure \ref{fig:meancookie}. The model for all the cookies is \(\mu = 10\). If we consider a single cookie weight of 8 grams (a data point), the difference of the cookie from the model is -2 (i.e., error):
 
