--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -163,7 +163,7 @@ X_3 &= 10 + 2 \\
 \end{aligned} 
 $$
 
-The mean/average of the population,  $\mu = 10$, is a parameter that serves as a model for the cookie weight data. However, it’s helpful to have an index, also known as variance, that indicates the extent to which the data do not correspond to the model from the model. 
+The mean/average of the population,  $\mu = 10$, is a parameter that serves as a model for the cookie weight data. However, it’s helpful to have an index, known as variance, that indicates the extent to which the data do not correspond to the model from the model. 
 
 
 ### Variance ($\sigma^2$)
