--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -4878,7 +4878,7 @@ Variance is easy to interpret as the average of the squared differences between 
 \end{aligned} 
 \]
 
-Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. Standard deviation can be thought of as the sum of the absolute differences from the mean divided by the square root of the number of observations. Standard deviation is not an average - because you are dividing by the square root of N instead of just N. As a result, it's much harder to describe what standard deviation means.
+Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. When this is done standard deviation can be thought of as the sum of the absolute differences from the mean divided by the square root of the number of observations, as illustrated below:
 
 \[
 \begin{aligned} 
@@ -4886,6 +4886,8 @@ sd(X) &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
  &= \frac{\sum{|X - \bar{X}|}}{\sqrt{N}}\\
 \end{aligned} 
 \]
+
+As illustrated above, standard deviation is not an average. It's not an average because you are dividing by the square root of N instead of just N. As a result, it's much harder to describe how to interpret standard deviation.
 
 We encourage you to think primarily in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straightforward. Additionally, variance is foundational in the language used to describe regression and analysis of variance. That said, standard deviation is used in the calculation of some standardized effect sizes - so it is important to know and understand both indices.
 
