--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -4814,9 +4814,9 @@ The mean/average of the population, \(\mu = 10\), is a parameter that serves as 
 \hypertarget{variance-sigma2}{%
 \subsection{\texorpdfstring{Variance (\(\sigma^2\))}{Variance (\textbackslash sigma\^{}2)}}\label{variance-sigma2}}
 
-Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented, at the population level, by the symbol \(\sigma^2\); a different notation is used at thesample level.
+Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented, at the population level, by the symbol \(\sigma^2\); a different notation is used at the sample level.
 
-Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation \(X_i = \mu +error_i\), see see Figure \ref{fig:meancookie}. The model for all the cookies is \(\mu = 10\). If we consider a single cookie weight of 8 grams (a data point), the difference of the cookie from the model is -2 (i.e., error):
+Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation \(X_i = \mu +error_i\), see see Figure \ref{fig:meancookie}. The model for all the cookies is \(\mu = 10\). If we consider a single cookie weight of 8 grams (a data point), the difference between the cookie from the model is -2 (i.e., error):
 
 \[
 \begin{aligned} 
@@ -4824,7 +4824,7 @@ X_1 &= 10 + (-2) \\
 \end{aligned} 
 \]
 
-We want a number that indicates the quality of the cookie model. Specifically, we want a single number to index model quality that indexes how the data differ from the cookie model. We refer to that index as variance (\(\sigma^2\)).
+We want a number that indicates the quality of the cookie model. Specifically, we want a single number that indexes overall how the data (i.e., cookie weights) differ from the model (i.e., the mean cookie). We refer to that index as variance (\(\sigma^2\)).
 
 \textbf{Calculating Squared Errors.} To calculate variance (\(\sigma^2\)), we use the errors for the cookies -- how the cookies differ from the mean/model. The first step is to square the errors/differnces. Those squared numbers are referred to as the ``squared differences'' or ``squared errors''. The calculation of the squared error for each cookie weight is shown below. The squared errors (or squared differences) are 4, 0, and 4.
 
