--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -170,7 +170,7 @@ The mean/average of the population,  $\mu = 10$, is a parameter that serves as a
 
 Variance is a simple way of calculating a single number to represent how data differ from a model. It is represented, at the population level, by the symbol $\sigma^2$; a different notation is used at the sample level.
 
-Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation $X_i = \mu +error_i$, see see Figure \@ref(fig:meancookie). The model for all the cookies is $\mu = 10$. If we consider a single cookie weight of 8 grams (a data point), the difference between the cookie from the model is -2 (i.e., error):
+Previously, how we expressed the difference/deviation of cookie weights (data) from the model (i.e., mean) with an error term in the equation $X_i = \mu +error_i$, see see Figure \@ref(fig:meancookie). The model for all the cookies is $\mu = 10$. If we consider a single cookie weight of 8 grams (a data point represented by $X_1$), the difference between the cookie from the model is -2 (i.e., error):
 
 $$
 \begin{aligned} 
