--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -4748,14 +4748,14 @@ Statistic tests are a means of helping researchers use sample data to make concl
 \hypertarget{a-small-population}{%
 \section{A small population}\label{a-small-population}}
 
-In this section we review how to calculate three commonly used population parameters. Populations are typically quite large but for simplicity we focus on a population of composed of the weights of just three chocolate chip cookies. We refer to the three cookies as \(X_1\), \(X_2\), and \(X_3\). The cookies have the weights of 8, 10, and 12 grams, respectively.
+In this section we review how to calculate three commonly used population parameters. Populations are typically quite large but for simplicity we focus on a population composed of the weights of just three chocolate chip cookies. We refer to the three cookies as \(X_1\), \(X_2\), and \(X_3\). The cookies have the weights of 8, 10, and 12 grams, respectively.
 
 \hypertarget{mean-mu}{%
 \subsection{\texorpdfstring{Mean (\(\mu\))}{Mean (\textbackslash mu)}}\label{mean-mu}}
 
 It can be helpful to create a model that describes our data. Of course, the model won't describe every participant perfectly and each participant will differ to some extent from the model.
 
-\textbf{Model:} To create a model we first need data, which in this example will be the weight of three different chocolate chip cookies. As mentioned previously, the weights the three cookies are designated by \(X_1\), \(X_2\), and \(X_3\). A simple model for our cookie weight data is the mean. At the population level the mean is represented by the symbol \(\mu\); at the sample level a different notation is used.
+\textbf{Model:} To create a model we first need data, which in this example will be the weight of three different chocolate chip cookies. As mentioned previously, the weights of the three cookies are designated by \(X_1\), \(X_2\), and \(X_3\). A simple model for our cookie weight data is the mean. At the population level the mean is represented by the symbol \(\mu\); at the sample level a different notation is used.
 
 \[
 \begin{aligned} 
@@ -4863,12 +4863,14 @@ The resulting variance is 2.67 grams\(^2\). The cookie weights were measured in 
 
 It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just use the difference (e.g., \((8 - 10) = -2\)) when calculating variance? Why not use the absolute difference (e.g., \(|8 - 10|= 2\)) when calculating variance? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing errors). When we use squared errors it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex mathematical reasons, we use squared errors when calculating the fit (or lack of fit) of a model.
 
-\textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In the cookie case, if the variance was zero, that would indicate that all the cookies had the same weight as the model, exactly 10 grams. To the extent that the variance is larger than zero it implies data points (i.e., cookie weights) differ from the model (i.e., the mean cookie). By implication, a larger variance indicates larger differences among the observations (e.g., cookie weights). That is, when the variance is small, cookie weights tend to be similar to the model -- and each other. In contrast, when the variance is large, cookie weights tend to be different from the model -- and each other.
+\textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In the cookie case, if the variance was zero, that would indicate that all the cookies had the same weight as the model, exactly 10 grams. To the extent that the variance is larger than zero it implies the data points (i.e., cookie weights) differ from the model (i.e., the mean cookie). By implication, a larger variance indicates larger differences among the observations (e.g., cookie weights). That is, when the variance is small, cookie weights tend to be similar to the model -- and each other. In contrast, when the variance is large, cookie weights tend to be different from the model -- and each other.
 
 \hypertarget{standard-deviation-sigma}{%
 \subsection{\texorpdfstring{Standard Deviation (\(\sigma\))}{Standard Deviation (\textbackslash sigma)}}\label{standard-deviation-sigma}}
 
-Variance is easy to interpret as the average of the squared differences between the model and the data. However, variance presents an answer in squared units (e.g., 2.67 grams\(^2\)). Consequently, some people prefer to take the square root of this value and call it standard deviation; representing it with the symbol \(\sigma\).
+Variance is a single number that index how data differ from a model. The interpretation of variance is straight forward. It is the average of the squared differences between the data and the model.
+
+An alternative index for how data differ from the mean/model is the standard deviation. Standard deviation is represented by the symbol \(\sigma\) and can be calculated as the square root of variance:
 
 \[
 \begin{aligned} 
@@ -4878,18 +4880,22 @@ Variance is easy to interpret as the average of the squared differences between 
 \end{aligned} 
 \]
 
-Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. When this is done standard deviation can be thought of as the sum of the absolute differences from the mean divided by the square root of the number of observations, as illustrated below:
+One reason that people like standard deviation is that variance presents the difference betweeeen the data and the model in squared units (e.g., 2.67 grams\(^2\)). In contrast, standard deviation presents the difference betweeeen the data and the model in the original unit (e.g., grams). Consequently, some people prefer standard deviation.
+
+\textbf{Interpretation}. Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. When this is done standard deviation can be thought of as the sum of the absolute differences from the mean divided by the square root of the number of observations, as illustrated below:
 
 \[
 \begin{aligned} 
-sd(X) &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
+\sigma &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
  &= \frac{\sum{|X - \bar{X}|}}{\sqrt{N}}\\
 \end{aligned} 
 \]
 
-As illustrated above, standard deviation is not an average. It's not an average because you are dividing by the square root of N instead of just N. As a result, it's much harder to describe how to interpret standard deviation.
+As illustrated above, standard deviation is not an average. It's not an average because you are dividing by the square root of N instead of just N. Because standard deviation is not an average, it's much harder to describe how to interpret it. In our view, the best way to think of standard deviation is simply as the square root of variance; because variance has straight forward interpretation.
 
-We encourage you to think primarily in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straightforward. Additionally, variance is foundational in the language used to describe regression and analysis of variance. That said, standard deviation is used in the calculation of some standardized effect sizes - so it is important to know and understand both indices.
+Therefore, we encourage you to think primarily in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straightforward. Additionally, variance is foundational in the language used to describe regression and analysis of variance. That said, standard deviation is used in the calculation of some standardized effect sizes - so it is important to know and understand both indices.
+
+Overall, the rules for interpreting standard deviation are similar to those for variance; but the standard deviation values are smaller than variance values. In the cookie case, if the standard deviation was zero, that would indicate that all the cookies had the same weight as the model, exactly 10 grams. To the extent that the standard deviation is larger than zero it implies the data points (i.e., cookie weights) differ from the model (i.e., the mean cookie). By implication, a larger standard deviation indicates larger differences among the observations (e.g., cookie weights). That is, when the standard deviation is small, cookie weights tend to be similar to the model -- and each other. In contrast, when the standard deviation is large, cookie weights tend to be different from the model -- and each other.
 
 \hypertarget{visualizing-populations}{%
 \section{Visualizing populations}\label{visualizing-populations}}
