--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -214,9 +214,9 @@ It probably strikes you as an odd choice to square the difference between each d
 
 ### Standard Deviation ($\sigma$)
 
-Variance is a single number that index how data differ from a model. The interpretation of variance is straight forward. It is the average of the squared differences between the data and the model. 
+An alternative index for how data differ from the mean/model is the standard deviation. To understand standard deviation you have to understand varince. Variance is a single number that indexes how data differ from a model. The interpretation of variance is straight forward. It is the average of the squared differences between the data and the model. 
 
-An alternative index for how data differ from the mean/model is the standard deviation. Standard deviation is represented by the symbol $\sigma$ and can be calculated as the square root of variance:
+Standard deviation is represented by the symbol $\sigma$ and can be calculated as the square root of variance:
 
 
 $$
@@ -227,7 +227,7 @@ $$
 \end{aligned} 
 $$
 
-One reason that people like standard deviation is that  variance presents the difference betweeeen the data and the model in squared units (e.g., 2.67 grams$^2$). In contrast, standard deviation presents the difference betweeeen the data and the model in the original unit (e.g., grams). Consequently, some people prefer standard deviation.
+One reason that people like standard deviation is presents the difference betweeeen the data and the model in the original units (e.g., grams). This is in contrast to variance which presents the difference betweeen the data and the model in squared units (e.g., 2.67 grams$^2$).
 
 **Interpretation**. Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. When this is done standard deviation can be thought of as the sum of the absolute differences from the mean divided by the square root of the number of observations, as illustrated below: 
 
