--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -5027,7 +5027,7 @@ You can visualize any \(\delta\) value (i.e., population \(d\)-value) using the 
 \item
   Make sure you understand what is represented by both the numerator and denominator in the SMD ratio.
 \item
-  SMD (i.e,. Cohen's d) represents the number of standard deviations between two population means. Recall both populations have the same standard deviation.
+  SMD (i.e., Cohen's d) represents the number of standard deviations between two population means. Recall both populations have the same standard deviation.
 \item
   SMD is indicated at the population level using the Greek letter delta (\(\delta\)). At the sample level we tend to use the term ``\(d\)-value'' or ``Cohen's \(d\)''.
 \end{enumerate}
